Update .env.example with new vars and refine login.spec.js test logic

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-BASE_URL=https://amritwprdev.piramalswasthya.org/aam
+BASE_URL=https://amritwprdev.piramalswasthya.org/
 AAM_PASSWORD=your-password-here
 AAM_USERNAME=your-username-here
 
