--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
   "type": "module",
   "devDependencies": {
     "@faker-js/faker": "^9.9.0",
-    "@playwright/test": "^1.53.0",
+    "@playwright/test": "^1.54.2",
     "@types/node": "^24.0.1"
   },
   "dependencies": {
     "@playwright/mcp": "^0.0.33",
-    "dotenv": "^16.6.1",
-    "playwright": "^1.54.2"
+    "dotenv": "^16.6.1"
   }
 }
