--- a/package.json
+++ b/package.json
@@ -14,10 +14,8 @@
   "devDependencies": {
     "@faker-js/faker": "^9.9.0",
     "@playwright/test": "^1.54.2",
-    "@types/node": "^24.0.1"
-  },
-  "dependencies": {
-    "@playwright/mcp": "^0.0.33",
+    "@types/node": "^24.0.1",
     "dotenv": "^16.6.1"
-  }
+  },
+  "dependencies": {}
 }
